--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -1,4 +1,4 @@
-<!-- JSON EDITOR -->
+{# JSON EDITOR #}
 {% include('field-builder-modal.html') %}
 
 <section id='json-editor'>
@@ -66,7 +66,7 @@
 
     <hr>
 
-    <!-- Display main text switch -->
+    {# Display main text switch #}
     <div class='d-inline-flex p-1'>
       <div class='mr-1'>{{ 'Display main text'|trans }}</div>
       <label class='switch'>
