--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -1,5 +1,5 @@
 {% include 'create-new-item-modal.html' %}
-<!-- Modal for import -->
+{# Modal for import #}
 <div class='modal fade' id='importModal' tabindex='-1' role='dialog' aria-labelledby='importModalLabel' aria-hidden='true'>
   <div class='modal-dialog' role='document'>
     <div class='modal-content'>
@@ -60,4 +60,4 @@
     </div>
   </div>
 </div>
-<!-- end modal -->
+{# end modal #}
