--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -1,4 +1,4 @@
-<!-- Modal to display plain text content -->
+{# Modal to display plain text content #}
 <div class='modal fade' id='plainTextModal' tabindex='-1' role='dialog' aria-labelledby='plainTextModalLabel' aria-hidden='true'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
@@ -18,11 +18,11 @@
   </div>
 </div>
 
-<!-- UPLOADED FILES -->
+{# UPLOADED FILES #}
 <div id='filesdiv'>
   {% if Entity.entityData.uploads %}
     <div class='d-flex justify-content-between'>
-      <div><!-- necessary div for flex -->
+      <div>{# necessary div for flex #}
         <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-toggle-target='uploadsDiv' data-toggle-target-extra='uploadsViewToggler' data-icon-target='uploadsDiv' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{% trans %}Attached file
           {% plural Entity.entityData.uploads|length %}
           Attached files
@@ -46,7 +46,7 @@
       {% for upload in Entity.entityData.uploads %}
         {% set ext = upload.real_name|getExt %}
 
-        <!-- COMPACT LAYOUT (0) -->
+        {# COMPACT LAYOUT (0) #}
         {% if App.Users.userData.uploads_layout == 0 %}
           <div class='col-md-3 col-sm-4 hl-hover-gray rounded'>
             {% include('upload-dropdown-menu.html') %}
@@ -59,7 +59,7 @@
             {% include('upload-replace-form.html') %}
           </div>
 
-        <!-- DEFAULT LAYOUT (1) -->
+        {# DEFAULT LAYOUT (1) #}
         {% else %}
           <div class='col-md-4 col-sm-6'>
             <div class='thumbnail box {{ upload.state == constant('Elabftw\\Enums\\State::Archived').value ? 'bg-light' }}' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}' style='overflow: visible'>
@@ -68,7 +68,7 @@
               <p class='mb-0'><i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Archived'|trans }}</p>
               {% endif %}
 
-              <!-- IMAGES -->
+              {# IMAGES #}
               {% if ext matches '/(jpg|jpeg|png|gif|tif|tiff|pdf|eps|svg|heic)$/i' %}
                 {# don't make the thumbnail clickable if it's a tif #}
                 {% if ext matches '/(jpg|jpeg|png|gif|pdf|eps|svg|heic)$/i' %}
@@ -92,15 +92,15 @@
                   </div>
                 {% endif %}
 
-              <!-- MOLFILES -->
+              {# MOLFILES #}
               {% elseif ext == 'mol' %}
                 <div class='text-center'>
                   <canvas class='molFile' id='molFile_{{ upload.id }}' data-molpath='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}'></canvas>
                 </div>
 
-              <!-- MOLECULES -->
+              {# MOLECULES #}
               {% elseif ext in constant('Elabftw\\Elabftw\\Extensions::MOLECULE') %}
-                <!-- build control dropdown to change the representation style -->
+                {# build control dropdown to change the representation style #}
                 <div style='padding-bottom: 5px' class='btn-group'>
                   <button type='button'
                     class='btn btn-secondary btn-xs dropdown-toggle'
@@ -129,7 +129,7 @@
                   </ul>
                 </div>
 
-                <!-- IMPORTANT: here the data-href has the storage first and the filename last or 3Dmol will get confused with the format -->
+                {# IMPORTANT: here the data-href has the storage first and the filename last or 3Dmol will get confused with the format #}
                 <div class='viewer_3Dmoljs'
                   data-href='app/download.php?storage={{ upload.storage }}&f={{ upload.long_name }}&name={{ upload.real_name }}'
                   data-style="{{ ext == 'pdb' ? 'cartoon:color=spectrum' : 'stick' }}"
@@ -137,7 +137,7 @@
                   id='3Dmol_{{ upload.id }}'>
                 </div>
 
-              <!-- DNA -->
+              {# DNA #}
               {% elseif ext in constant('Elabftw\\Elabftw\\Extensions::DNA') %}
                 <div class='viewer-ove'
                   data-href='app/download.php?f={{ upload.long_name }}&storage={{ upload.storage }}&name={{ upload.real_name }}'
@@ -145,7 +145,7 @@
                   id='OVE_{{ upload.id }}'>
                 </div>
 
-              <!-- TEXT -->
+              {# TEXT #}
               {% elseif ext matches '/(txt|md|json)$/i' %}
                 <span class='eye-overlay'
                   data-action='toggle-modal' data-target='plainTextModal' data-ext='{{ ext }}'
@@ -162,7 +162,7 @@
                   </video>
                 </div>
 
-              <!-- ANYTHING ELSE -->
+              {# ANYTHING ELSE #}
               {% else %}
                 <i class='fas {{ ext2icon(ext) }} thumb rounded mx-auto d-block text-center'></i>
               {% endif %}
@@ -182,7 +182,7 @@
               {% include('upload-comment.html') %}
 
               {% include('upload-more-info.html') %}
-              </div><!-- end div.caption -->
+              </div>{# end div.caption #}
               {% include('upload-replace-form.html') %}
             </div>
           </div>
@@ -191,4 +191,4 @@
     </div>
     <hr>
   {% endif %}
-</div><!-- #filesdiv -->
+</div>{# #filesdiv #}
