--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<!-- UNVALIDATED USERS BLOCK -->
+{# UNVALIDATED USERS BLOCK #}
 <div id='unvalidatedUsersBox'>
 {% if unvalidatedUsersArr %}
   <div class='box'>
@@ -17,7 +17,7 @@
 {% endif %}
 </div>
 
-<!-- ADMIN PANEL MAIN MENU -->
+{# ADMIN PANEL MAIN MENU #}
 <ul class='tabbed-menu'>
   <li data-action='switch-tab' data-tabtarget='1'>{{ 'Team'|trans }}</li>
   <li data-action='switch-tab' data-tabtarget='2'>{{ 'Groups'|trans }}</li>
@@ -28,7 +28,7 @@
   <li data-action='switch-tab' data-tabtarget='7'>{{ 'Tag manager'|trans }}</li>
 </ul>
 
-<!-- loading spinner -->
+{# loading spinner #}
 <div class='d-flex justify-content-center' id='loading-spinner'>
   <div class='lds-dual-ring'></div>
 </div>
@@ -42,7 +42,7 @@
 {% set src = App.teamArr %}
 {% set model = 'teams/current' %}
 
-<!-- TAB 1 TEAM CONFIG -->
+{# TAB 1 TEAM CONFIG #}
 <div data-tabcontent='1' hidden>
   <h3 class='p-2 pl-3 section-title'>{{ 'Configure your Team'|trans }}</h3>
 
@@ -153,23 +153,23 @@
   </div>
 </div>
 
-<!-- TAB 2 TEAM GROUPS -->
+{# TAB 2 TEAM GROUPS #}
 <div data-tabcontent='2' hidden>
   <p><a target='_blank' rel='noopener' href='https://doc.elabftw.net/admin-guide.html#groups-tab'>{{ 'Link to documentation'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></p>
   <h3 class='p-2 pl-3 section-title'>{{ 'Create a group'|trans }}</h3>
 
   <div class='pl-3 mt-2 mb-5'>
-    <!-- CREATE A GROUP -->
+    {# CREATE A GROUP #}
     <div class='input-group'>
       <input type='text' id='teamGroupCreate' class='form-control' placeholder='{{ 'Add a group'|trans }}' aria-label='{{ 'Add a group'|trans }}'>
       <div class='input-group-append'>
         <button class='btn btn-primary' data-action='create-teamgroup' type='button'>{{ 'Create'|trans }}</button>
       </div>
     </div>
-    <!-- END CREATE GROUP -->
+    {# END CREATE GROUP #}
   </div>
 
-  <!-- SHOW EXISTING GROUPS -->
+  {# SHOW EXISTING GROUPS #}
   <div id='team_groups_div'>
     <h3 class='p-2 pl-3 section-title'>{{ 'Existing groups'|trans }}</h3>
     <div class='pl-3'>
@@ -185,7 +185,7 @@
             <div class='user-badge rounded px-2 py-1 mr-2 mt-2'>{{ user.fullname|raw }} <span title='{{ 'Delete'|trans }}' class='clickable rmUserFromGroup m-1' data-user='{{ user.userid }}' data-group='{{ teamGroup.id }}'><i class='fas fa-xmark' style='color:#29AEB9' ></i></span></div>
             {% endfor %}
           </div>
-          <!-- ADD USER -->
+          {# ADD USER #}
           <div class='input-group mt-3'>
             <div class='input-group-prepend'>
               <span class='input-group-text'><i class='fas fa-magnifying-glass'></i></span>
@@ -200,9 +200,9 @@
     </div>
   </div>
 </div>
-<!-- END TEAM GROUPS -->
+{# END TEAM GROUPS #}
 
-<!-- TAB 3 USERS -->
+{# TAB 3 USERS #}
 <div data-tabcontent='3' hidden>
   {% include 'editusers.html' %}
 </div>
@@ -214,7 +214,7 @@
   <div class='pl-3 mb-5' id='experiments_categoriesDiv'>
     <div class='mb-2 d-flex justify-content-between'>
       <p class='col-form-label'>{{ 'Create and modify the categories available to experiments.'|trans }}</p>
-      <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
+      {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
       <div>
         <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createexperiments_categoriesModal'>{{ 'Create'|trans }}</button>
       </div>
@@ -263,7 +263,7 @@
     <div {{ App.Request.query.has('templateid') ? 'hidden' }}>
       <div class='d-flex justify-content-between'>
         <p class='col-form-label'>{{ 'This menu allows you to define categories for your resources. A resource category is similar to an experiment template but for resources entries.'|trans }}</p>
-        <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
+        {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
         <div>
           <button type='button' class='btn btn-primary' data-action='itemstypes-create'>{{ 'Create'|trans }}</button>
         </div>
@@ -283,7 +283,7 @@
       <p>{{ 'Use the handles to adjust the order in which the categories appear in the application.'|trans }}</p>
   {% endif %}
 
-    <!-- templateData will be loaded with content from an item type if templateid is present is url -->
+    {# templateData will be loaded with content from an item type if templateid is present is url #}
     {% if Entity.entityData %}
       <div class='float-right'>
         <button class='btn btn-danger' data-id='{{ Entity.id }}' data-action='itemstypes-destroy'>{{ 'Delete'|trans }}</button>
@@ -317,7 +317,7 @@
       </div>
       {% set mode = 'edit-template' %}
       {% include 'steps-links-edit.html' %}
-      <!-- METADATA editor for items types -->
+      {# METADATA editor for items types #}
       {% include 'json-editor.html' %}
     {% endif %}
   </div>
@@ -377,7 +377,7 @@
   <div class='pl-3' id='items_statusDiv'>
     <div class='mb-2 d-flex justify-content-between'>
       <p class='col-form-label'>{{ 'Create and modify the status available to resources.'|trans }}</p>
-      <!-- CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports -->
+      {# CREATE NEW BUTTON the div around the button is necessary or the button itself gets resized on small viewports #}
       <div>
         <button type='button' class='btn btn-primary' data-action='toggle-modal' data-target='createitems_statusModal'>{{ 'Create'|trans }}</button>
       </div>
@@ -423,7 +423,7 @@
 </div>
 
 
-<!-- TAB 6 EXPORT -->
+{# TAB 6 EXPORT #}
 <div data-tabcontent='6' hidden>
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Export database items'|trans }}</h3>
   <div class='pl-3 mb-5'>
@@ -508,7 +508,7 @@
   </div>
 </div>
 
-<!-- TAB 7 TAG MANAGER -->
+{# TAB 7 TAG MANAGER #}
 <div data-tabcontent='7' hidden>
   <p>{{ 'From here you can add, edit or delete the tags for your team. Click the tag to edit it. Then click the deduplicate button to merge similar tags.'|trans }}</p>
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Add a tag'|trans }}</h3>
