--- a/src/templates/change-pass.html
+++ b/src/templates/change-pass.html
@@ -7,7 +7,7 @@
     {{ App.Session.get('csrf')|csrf }}
 
     <p class='smallgray'>{{ minPasswordLength() }} {{ 'characters minimum'|trans }}</p>
-    <!-- output the key and userid as hidden fields -->
+    {# output the key and userid as hidden fields #}
     <input type="hidden" name="key" value="{{ key|e }}" />
     <input type="hidden" name="userid" value="{{ userid|e }}" />
 
