--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<!-- Modal for reset password -->
+{# Modal for reset password #}
 <div class='modal fade' id='resetModal' tabindex='-1' role='dialog' aria-labelledby='resetModalLabel' aria-hidden='true'>
   <div class='modal-dialog modal-dialog-centered' role='document'>
     <div class='modal-content'>
@@ -28,7 +28,7 @@
   </div>
 </div>
 
-<!-- LOGIN ANNOUNCEMENT -->
+{# LOGIN ANNOUNCEMENT #}
 {% if App.Config.configArr.login_announcement %}
   {{ App.Config.configArr.login_announcement|msg('warning') }}
 {% endif %}
@@ -36,7 +36,7 @@
 <section class='text-center'>
   <img src='/assets/images/logo.png' alt='logo elabftw' class='col-md-3' />
 
-  <!-- Allow user to request access to a team -->
+  {# Allow user to request access to a team #}
   {% if App.Session.has('initial_team_selection_required') %}
     <div class='separator col-md-4 mx-auto'></div>
     <h2>{{ 'Request access to a team'|trans }}</h2>
@@ -59,7 +59,7 @@
         <button class='btn btn-primary mt-2' type='submit' name='submit'>{{ 'Request access'|trans }}</button>
       </div>
     </form>
-  <!-- Show message when initial team selection is done -->
+  {# Show message when initial team selection is done #}
   {% elseif App.Session.has('teaminit_done') %}
     {% if App.Session.get('teaminit_done_need_validation') == '1' %}
       {{ 'Your account has been created and will need to be validated by an admin.'|trans|msg('ok') }}
@@ -98,7 +98,7 @@
     {% else %}
 
     {% if showLocal or App.Config.configArr.ldap_toggle %}
-      <!-- Login form , the id is for an acceptance test -->
+      {# Login form , the id is for an acceptance test #}
       <form method='post' id='login' action='app/controllers/LoginController.php' autocomplete='off'>
         {{ App.Session.get('csrf')|csrf }}
         <h1 class='mt-4'>{{ 'Login to your account'|trans }}</h1>
@@ -107,7 +107,7 @@
           <label for='email'>{{ App.Config.configArr.ldap_search_attr == 'mail' ? 'Email'|trans : 'Login'|trans }}</label>
           <input class='form-control mb-4' id='email' name='email' type='{{ App.Config.configArr.ldap_search_attr == 'mail' ? 'email' : 'text' }}' value='{{ App.Session.has('email') ? App.Session.get('email') }}' autocomplete='email' required />
           <label for='password'>{{ 'Password'|trans }}</label>
-          <!-- add tabindex=-1 to the forget password so we can switch from login to password with tab -->
+          {# add tabindex=-1 to the forget password so we can switch from login to password with tab #}
           {% if showLocal %}
             <a class='float-right underlined resetPassword' tabindex='-1' data-action='toggle-modal' data-target='resetModal'>{{ 'Forgot password?'|trans }}</a>
           {% endif %}
@@ -128,7 +128,7 @@
         </div>
 
         {% if App.Config.configArr.ldap_toggle %}
-        <!-- Select login type (local or ldap) -->
+        {# Select login type (local or ldap) #}
         <div class='form-check form-check-inline'>
           {% if showLocal %}
             <input class='form-check-input' type='radio' name='auth_type' id='auth_type_local' value='local' {{ App.Config.configArr.ldap_toggle == '0' ? 'checked' }}>
@@ -143,7 +143,7 @@
           <input type='hidden' name='auth_type' value='local'>
         {% endif %}
 
-        <!-- Login button -->
+        {# Login button #}
         <button type='submit' class='btn btn-primary' name='Submit'>{{ 'Login'|trans }}</button>
       </form>
       {% if App.Config.configArr.local_register %}
@@ -168,7 +168,7 @@
               {% endif %}
             {% endfor %}
           </select>
-          <!-- Remember me checkbox -->
+          {# Remember me checkbox #}
           {% if App.Config.configArr.remember_me_allowed %}
             <div class='form-check mt-2'>
               <input type='checkbox' class='form-check-input' {{ App.Config.configArr.remember_me_checked ? 'checked' }} name='rememberme' id='rememberme-2' />
