--- a/src/templates/permissions-edit-modal.html
+++ b/src/templates/permissions-edit-modal.html
@@ -21,7 +21,7 @@
   {% set label = 'Can book'|trans %}
   {% set modalTitle = 'Select who can book this entry'|trans %}
 {% endif %}
-<!-- Modal for permission edit -->
+{# Modal for permission edit #}
 <div class='modal fade' id='permModal-{{ identifier }}' tabindex='-1' role='dialog' aria-labelledby='permModalLabel_{{ identifier }}' aria-hidden='true'>
   <div class='modal-dialog modal-lg' role='document'>
     <div class='modal-content'>
@@ -42,7 +42,7 @@
               >{{ value|trans }}</option>
             {% endfor %}
           </select>
-          <!-- TEAMS -->
+          {# TEAMS #}
           <label for='{{ identifier }}_select_teams'>{{ 'Teams'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a team here will give access to all members of this team.'|trans }}</p>
           <select id='{{ identifier }}_select_teams' multiple class='form-control' autocomplete='off'>
@@ -52,7 +52,7 @@
               >{{ 'Team'|trans }} - {{ team.name }}</option>
             {% endfor %}
           </select>
-          <!-- TEAMGROUPS -->
+          {# TEAMGROUPS #}
           <label for='{{ identifier }}_select_teamgroups'>{{ 'Teamgroups'|trans }}</label> <p class='smallgray d-inline'>{{ '(hold %sctrl%s key to select multiple entries)'|trans|format('<kbd>', '</kbd>')|raw }}</p>
           <p class='smallgray'>{{ 'Selecting a teamgroup here will give access to all users part of this teamgroup.'|trans }}{{ myTeamgroupsArr|length == 0 ? ' ' ~ 'You do not belong to any teamgroup.'|trans }}</p>
           <select {{ myTeamgroupsArr|length == 0 ? 'disabled' }} id='{{ identifier }}_select_teamgroups' multiple class='form-control' autocomplete='off'>
@@ -62,7 +62,7 @@
                       >{{ 'Teamgroup'|trans }} - {{ tg.name }}</option>
             {% endfor %}
           </select>
-          <!-- USERS -->
+          {# USERS #}
           <label for='{{ identifier }}_select_users'>{{ 'Users'|trans }}</label> <p class='smallgray d-inline'>{{ 'Allow individual users to access this entry.'|trans }}</p>
           <ul class='list-group mb-1' id='{{ identifier }}_list_users'>
             {% set humanCan = permissionsJson|canToHuman %}
@@ -72,7 +72,7 @@
               </li>
             {% endfor %}
           </ul>
-          <!-- add user to permissions input -->
+          {# add user to permissions input #}
           <div id='autocompleteAnchorDiv_{{ identifier }}' class='input-group'>
             <input id='{{ identifier }}_select_users' data-identifier='{{ identifier }}' data-complete-target='users' class='form-control' placeholder='{{ 'Add user'|trans }}' autocomplete='off'>
             <div class='input-group-append'>
