--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -3,7 +3,7 @@
   <h1 id='pageTitle'>{{ App.pageTitle }}</h1>
 {% endblock %}
 
-<!-- Modal for advanced search -->
+{# Modal for advanced search #}
 <div class='modal fade' id='advancedSearchModal' tabindex='-1' role='dialog' aria-labelledby='advancedSearchModalLabel' aria-hidden='true'>
   <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
@@ -158,7 +158,7 @@
           <dd>Term or Quoted term</dd>
           <dt><span class='token keyword'>visibility</span></dt>
           <dd>Term or Quoted term<br>
-              <!--A group name (e.g., <span class='token string'>'Lab Heroes'</span>) or-->
+              {# A group name (e.g., <span class='token string'>'Lab Heroes'</span>) or #}
               <span class='token string'>public</span>,
               <span class='token string'>organization</span>,
               <span class='token string'>myteams</span>,
@@ -198,10 +198,10 @@
 </div>
 
 
-<!-- SEARCH PAGE BEGIN -->
+{# SEARCH PAGE BEGIN #}
 <hr>
 <form method='get' action='search.php'>
-<!-- MAIN TEXTAREA FOR EXTENDED QUERY -->
+{# MAIN TEXTAREA FOR EXTENDED QUERY #}
 <div class='row'>
   <div class='col-md-12 mb-2'>
     <h5><label for='extendedArea'>{{ 'Search query'|trans }}</label></h5>
@@ -315,7 +315,7 @@
 </div>
 
 <div class='row mb-2'>
-  <!-- SEARCH DATE -->
+  {# SEARCH DATE #}
   <div class='col-md-6'>
     <label class='d-inline' for='date'>{{ 'Date from'|trans }}</label>
     <div class='input-group'>
@@ -336,12 +336,12 @@
     <label class='d-inline' for='dateTo'>{{ 'Date to (optional)'|trans }}</label>
     <input id='dateTo' name='dateTo' type='date' class='form-control filterHelper' data-filter='date' value='{{ Request.query.get('dateTo') != '' ? Request.query.get('dateTo') }}'/>
   </div>
-  <!-- END SEARCH DATE -->
+  {# END SEARCH DATE #}
 </div>
 
 <hr>
 
-<!-- NEW ROW -->
+{# NEW ROW #}
 <div class='row mb-2'>
   {# AUTHOR/OWNER HELPER #}
   <div class='col-md-4'>
@@ -360,9 +360,9 @@
       </optgroup>
     </select>
   </div>
-  <!-- END AUTHOR/OWNER HELPER -->
+  {# END AUTHOR/OWNER HELPER #}
 
-  <!-- VISIBILITY SEARCH -->
+  {# VISIBILITY SEARCH #}
   <div class='col-md-4'>
     <label for='visibility'>{{ 'And visibility is:'|trans }} </label><br>
     <select id='visibility' name='vis' data-filter='visibility' class='form-control filterHelper'>
@@ -372,12 +372,12 @@
       {% endfor %}
     </select>
   </div>
-  <!-- END VISIBILITY SEARCH -->
+  {# END VISIBILITY SEARCH #}
 </div>
 
-<!-- NEW ROW -->
+{# NEW ROW #}
 <div class='row mb-2'>
-  <!-- RATING -->
+  {# RATING #}
   <div class='col-md-6'>
     <label for='rating'>{{ 'And rating is'|trans }}</label>
     <select id='rating' name='rating' data-filter='rating' class='form-control filterHelper'>
@@ -388,8 +388,8 @@
       {% endfor %}
     </select>
   </div>
-  <!-- END RATING -->
-  <!-- LOCK -->
+  {# END RATING #}
+  {# LOCK #}
   <div class='col-md-3'>
     <label for='locked'>{{ 'Locked'|trans }}</label>
     <select id='locked' name='locked' class='form-control filterHelper' data-filter='locked'>
@@ -398,9 +398,9 @@
       <option value='no' {{- Request.query.get('locked') == 'no' ? ' selected' }}>{{ 'No'|trans|lower }}</option>
     </select>
   </div>
-  <!-- END LOCK -->
+  {# END LOCK #}
 
-  <!-- TIMESTAMPED -->
+  {# TIMESTAMPED #}
   <div class='col-md-3'>
     <label for='timestamped'>{{ 'Timestamped'|trans }}</label>
     <select id='timestamped' name='timestamped' class='form-control filterHelper' data-filter='timestamped'>
@@ -409,11 +409,11 @@
       <option value='no' {{- Request.query.get('timestamped') == 'no' ? ' selected' }}>{{ 'No'|trans|lower }}</option>
     </select>
   </div>
-  <!-- END LOCK -->
+  {# END LOCK #}
 </div>
 
 <hr>
-<!-- METADATA SEARCH -->
+{# METADATA SEARCH #}
 <h4 data-action='toggle-next' class='d-inline togglable-section-title mt-3 mb-2'><i class='fas fa-caret-right fa-fw mr-2'></i>{{ 'Extra fields search'|trans }}</h4>
 <div hidden data-save-hidden='metadataSearchDiv'>
   {# add as many extra fields as present in the query but at least one #}
@@ -437,7 +437,7 @@
   <div data-action='add-extra-fields-search-inputs'><i class='fas fa-plus-circle fa-2x'></i></div>
 </div>
 
-<!-- Search action buttons -->
+{# Search action buttons #}
 <div style='margin:30px;' class='text-center'>
   <button id='searchButton' class='btn btn-primary' value='Submit' type='submit'>
     {{ 'Launch search'|trans }}
