--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,8 +1,8 @@
 <div class='row mt-4'>
-  <!-- STEPS -->
+  {# STEPS #}
   <section class='col-md-12'>
     <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Steps'|trans }}</h4>
-    <!-- ADD STEP -->
+    {# ADD STEP #}
     <div id='stepsDiv' class='mt-2' data-save-hidden='stepsDiv'>
       <div class='sortable' id='steps_div_{{ Entity.id }}' data-axis='y' data-table='{{ Entity.type ? Entity.type : 'items_types' }}_steps'>
         {% for step in Entity.entityData.steps %}
@@ -92,9 +92,9 @@
     <hr>
   </div>
 
-  <!-- LINKS -->
+  {# LINKS #}
   {% if Entity.type == 'items' or Entity.type == 'experiments' %}
-    <!-- EXPERIMENTS LINKS -->
+    {# EXPERIMENTS LINKS #}
     <section class='col-md-12'>
       <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{% trans %}
       Linked experiment
@@ -102,7 +102,7 @@
       Linked experiments
       {% endtrans %}</h4>
       <div class='mt-2' data-save-hidden='linksExpDiv'>
-        <!-- display experiments links -->
+        {# display experiments links #}
         <div id='linksExpDiv'>
             {% if Entity.entityData.experiments_links %}
             <ul class='list-group'>
@@ -110,7 +110,7 @@
                   {% set randomId = random() %}
                   <li class='list-group-item' id='parent_{{ randomId }}'>
                     <div class='float-right ml-1'>
-                      <!-- toggle body -->
+                      {# toggle body #}
                       <span data-type='experiments' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
                         <i class='fas fa-plus-square'></i>
                       </span>
@@ -130,15 +130,15 @@
                     <i class='fas fa-link mr-1'></i>
                     <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span> - <a href='experiments.php?mode=view&id={{ link.itemid }}'>
                     {{ link.title|raw }}</a>
-                    <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
-                    <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
+                    {# container to hold the body of the entity if it is toggled with the +/- icon #}
+                    {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
                     <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'><div></div></div>
                   </li>
                 {% endfor %}
             </ul>
           {% endif %}
         </div>
-        <!-- ADD LINK -->
+        {# ADD LINK #}
         <div class='input-group mt-2'>
           <div class='input-group-prepend'>
             <span class='input-group-text'><i class='fas fa-magnifying-glass'></i></span>
@@ -161,11 +161,11 @@
     </section>
   {% endif %}
 
-  <!-- ITEMS LINKS -->
+  {# ITEMS LINKS #}
   <section class='col-md-12'>
     <h4 data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i> {{ 'Linked resources'|trans }}</h4>
     <div class='mt-2' data-save-hidden='linksDiv'>
-      <!-- DISPLAY ITEMS LINKS -->
+      {# DISPLAY ITEMS LINKS #}
       <div id='linksDiv'>
           {% if Entity.entityData.items_links %}
           <ul class='list-group'>
@@ -173,7 +173,7 @@
                 {% set randomId = random() %}
                 <li class='list-group-item' id='parent_{{ randomId }}'>
                   <div class='float-right ml-1'>
-                    <!-- toggle body -->
+                    {# toggle body #}
                     <span data-type='items' data-id='{{ link.itemid }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
                       <i class='fas fa-plus-square'></i>
                     </span>
@@ -192,15 +192,15 @@
                   <i class='fas fa-link mr-1'></i>
                   <span class='item-category' style='color:#{{ link.mainattr_color }}'>{{ link.mainattr_title|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
                   {{ link.title|raw }}</a>
-                  <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
-                  <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
+                  {# container to hold the body of the entity if it is toggled with the +/- icon #}
+                  {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
                   <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'><div></div></div>
                 </li>
               {% endfor %}
           </ul>
         {% endif %}
       </div>
-      <!-- ADD LINK -->
+      {# ADD LINK #}
       <div class='input-group mt-2'>
         <div class='input-group-prepend'>
           <span class='input-group-text'><i class='fas fa-magnifying-glass'></i></span>
