--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -12,7 +12,7 @@
         </div>
       </div>
 
-      <!-- this will be filled with the to-do items by js -->
+      {# this will be filled with the to-do items by js #}
       <div id='todoItems' class='sortable d-flex flex-column' data-axis='y' data-table='todolist'></div>
     </div>
 
@@ -22,7 +22,7 @@
         <h3 class='mr-auto'>{{ 'Unfinished steps'|trans }}</h3>
       </div>
 
-      <!-- Toggle scope User/Team switch -->
+      {# Toggle scope User/Team switch #}
       <div class='d-inline-flex rounded border-white p-1'>
         <div class='mr-1'>{{ 'User'|trans }}</div>
         <label class='switch'>
@@ -33,17 +33,17 @@
       </div>
     </div>
 
-    <!-- EXPERIMENT STEPS -->
+    {# EXPERIMENT STEPS #}
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='py-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h3>
-    <div data-save-hidden='todoStepsExperiments'><!-- this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container -->
-      <!-- id is needed to fill it from Todolist.class.ts -->
+    <div data-save-hidden='todoStepsExperiments'>{# << this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container #}
+      {# id is needed to fill it from Todolist.class.ts #}
       <div id='todoStepsExperiments' class='d-flex flex-column'></div>
     </div>
 
-    <!-- ITEMS STEPS -->
+    {# ITEMS STEPS #}
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='py-2'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Resources'|trans }}</h3>
-    <div data-save-hidden='todoStepsItem'><!-- this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container -->
-      <!-- id is needed to fill it from Todolist.class.ts -->
+    <div data-save-hidden='todoStepsItem'>{# << this div is here as a target of the toggle-next, because for some reason 'hidden' doesn't work on a flex container #}
+      {# id is needed to fill it from Todolist.class.ts #}
       <div id='todoStepsItems' class='d-flex flex-column'></div>
     </div>
   </div>
